backend/client-service/client-service.yml
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  ports:
  - name: http
    targetPort: 8084
    port: 80
  selector:
    app: client
