backend/client-service/client-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: client-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: client.localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: client-service
          servicePort: http
